# bionet-service-guard

./: .gitignore  Makefile  README.md  pyproject.toml
bionet/: api.py  cli.py  server.py  types.py  w3.py
contracts/src/: IServiceRegistry.sol  ServiceRegistry.sol
contracts/test/: Registry.t.sol
example/: dnaservice.py  user.py
tests/: conftest.py  test_server.py  test_types.py
